--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,7 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+# Test change for copier update
+
 [*.md{,x}]
 trim_trailing_whitespace = false
