--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
         if: ${{ !cancelled() && steps.check-prev.outputs.skip_commit != 'true' }}
         uses: suzuki-shunsuke/commit-action@v0.0.14
         with:
-          commit_message: "style: auto-format"
+          commit_message: 'style: auto-format'
           workflow: deny
           github_token: ${{ steps.app-token.outputs.token }}
 
