--- a/renovate.json5
+++ b/renovate.json5
@@ -1,4 +1,4 @@
 {
-  $schema: "https://docs.renovatebot.com/renovate-schema.json",
-  extends: ["github>fohte/renovate-config:base.json5"],
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  extends: ['github>fohte/renovate-config:base.json5'],
 }
