--- a/copier.yml
+++ b/copier.yml
@@ -10,6 +10,13 @@ type:
   default: base
   help: Project type (base = minimal template, node = Node.js/TypeScript project)
 
+# Note: _folder_name cannot be used because it resolves to a temporary directory
+# path during copier update. See: https://github.com/copier-org/copier/issues/1285
+project_name:
+  type: str
+  help: Project name (used for package.json name field)
+  when: "{{ type == 'node' }}"
+
 description:
   type: str
   help: Project description for README.md
