--- a/tests/fixtures/node.yml
+++ b/tests/fixtures/node.yml
@@ -2,6 +2,7 @@
 # Used by validate-template.yml to test template rendering
 
 type: node
+project_name: node
 description: Test Node.js project description
 is_public: false
 use_release_please: false
