fix(copier): use project_name for README.md title as well
Apply the same fix to README.md.jinja for consistency, even though
README.md is in _skip_if_exists and won't cause conflicts during update.

--- a/copier.yml
+++ b/copier.yml
@@ -14,8 +14,7 @@ type:
 # path during copier update. See: https://github.com/copier-org/copier/issues/1285
 project_name:
   type: str
-  help: Project name (used for package.json name field)
-  when: "{{ type == 'node' }}"
+  help: Project name
 
 description:
   type: str
