--- a/tests/fixtures/base-public.yml
+++ b/tests/fixtures/base-public.yml
@@ -1,5 +1,6 @@
 # Test fixture for public repository
 type: base
+project_name: base-public
 description: Test project description
 is_public: true
 use_release_please: false
