--- a/tests/fixtures/base-release.yml
+++ b/tests/fixtures/base-release.yml
@@ -1,5 +1,6 @@
 # Test fixture for release-please enabled
 type: base
+project_name: base-release
 description: Test project description
 is_public: false
 use_release_please: true
