--- a/copier.yml
+++ b/copier.yml
@@ -7,8 +7,9 @@ type:
   choices:
     - base
     - node
+    - rust
   default: base
-  help: Project type (base = minimal template, node = Node.js/TypeScript project)
+  help: Project type (base = minimal template, node = Node.js/TypeScript project, rust = Rust project)
 
 description:
   type: str
@@ -22,6 +23,7 @@ description:
 _skip_if_exists:
   - README.md
   - bun.lock
+  - Cargo.lock
 
 # Exclude files that are specific to this template repository
 # and not needed in derived repositories
@@ -44,9 +46,18 @@ _exclude:
   - "{% if type != 'node' %}tsconfig.json{% endif %}"
   - "{% if type != 'node' %}eslint.config.js{% endif %}"
   - "{% if type != 'node' %}vitest.config.ts{% endif %}"
-  - "{% if type != 'node' %}.gitignore{% endif %}"
-  - "{% if type != 'node' %}src{% endif %}"
   - "{% if type != 'node' %}bun.lock{% endif %}"
+  # Exclude Rust specific files when type is not 'rust'
+  - "{% if type != 'rust' %}Cargo.toml{% endif %}"
+  - "{% if type != 'rust' %}Cargo.lock{% endif %}"
+  - "{% if type != 'rust' %}rust-toolchain.toml{% endif %}"
+  - "{% if type != 'rust' %}src/main.rs{% endif %}"
+  # Exclude Node.js specific src files when type is not 'node'
+  - "{% if type != 'node' %}src/index.ts{% endif %}"
+  - "{% if type != 'node' %}src/index.test.ts{% endif %}"
+  # Exclude type-specific files
+  - "{% if type not in ['node', 'rust'] %}.gitignore{% endif %}"
+  - "{% if type not in ['node', 'rust'] %}src{% endif %}"
 
 # Template parameters
 is_public:
