ci(validate-template): skip workflow for Renovate bot commits
When Renovate pushes a commit, both validate-template.yml and
sync-generated-to-template.yml are triggered simultaneously.
validate-template.yml was using stale template/ (before sync completes)
to regenerate generated/, causing incorrect regeneration and redundant
commits.

Skip validate-template for Renovate commits and let sync finish first.
Validate will run on sync's commit (fohte-bot) with updated template/.

--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -13,6 +13,12 @@ permissions:
 jobs:
   list-fixtures:
     runs-on: ubuntu-latest
+    # Skip for Renovate bot commits.
+    # Renovate updates generated/ files, which triggers sync-generated-to-template.yml
+    # to sync changes to template/. If we run regenerate here on Renovate's commit,
+    # we may use stale template/ (before sync completes), causing incorrect regeneration.
+    # By skipping here, we let sync finish first, then validate runs on sync's commit.
+    if: github.actor != 'renovate[bot]'
     outputs:
       fixtures: ${{ steps.list.outputs.fixtures }}
     steps:
