renovate: ignore template directory
Renovate was trying to read template/package.json which doesn't exist
(only template/package.json.jinja exists as a Copier template file),
causing "Could not read file content" warnings. The template/
directory contains Copier templates, not actual project files, so it
should be excluded from dependency management.

--- a/renovate.json5
+++ b/renovate.json5
@@ -4,4 +4,5 @@
     'github>fohte/renovate-config:base.json5',
     'github>fohte/renovate-config:lefthook.json5',
   ],
+  ignorePaths: ['template/**'],
 }
