--- a/renovate.json5
+++ b/renovate.json5
@@ -4,5 +4,6 @@
     'github>fohte/renovate-config:base.json5',
     'github>fohte/renovate-config:lefthook.json5',
   ],
+  // template/ contains Copier templates (*.jinja), not actual project files
   ignorePaths: ['template/**'],
 }
