--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -46,7 +46,20 @@ jobs:
 
       - uses: actions/checkout@v5
 
+      - name: Fetch master branch
+        run: git fetch origin master --depth=1
+
       - uses: jdx/mise-action@v2
+
+      - name: Save diff before regeneration
+        id: save-diff
+        run: |
+          git diff origin/master -- generated/ > /tmp/before-regen.diff || true
+          if [[ -s /tmp/before-regen.diff ]]; then
+            echo "has_diff=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_diff=false" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Regenerate all fixtures
         run: |
@@ -57,6 +70,10 @@ jobs:
             # Remove answers file as it contains commit hash that changes on every run
             rm -f "generated/$fixture/.copier-answers.yml"
           done
+
+      - name: Check Renovate changes preserved
+        if: steps.save-diff.outputs.has_diff == 'true'
+        run: scripts/check-renovate-diff-preserved /tmp/before-regen.diff
 
       - name: Check if node template changed
         uses: tj-actions/changed-files@v47
