ci(sync-generated-to-template): skip commit when patch fails
Previously, the commit step ran when `has_patches == 'true'` regardless
of patch success. This caused partial commits even when patches failed,
which triggered validate-template workflow and led to infinite loops.

Now require both `has_patches == 'true'` and `success == 'true'` to
ensure commits only happen when all patches apply successfully.

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -45,7 +45,7 @@ jobs:
           BASE_REF: ${{ github.event.pull_request.base.ref }}
 
       - name: Commit changes to PR branch
-        if: steps.sync.outputs.has_patches == 'true'
+        if: steps.sync.outputs.has_patches == 'true' && steps.sync.outputs.success == 'true'
         uses: suzuki-shunsuke/commit-action@v0.0.14
         with:
           commit_message: 'chore(template): sync changes from generated/'
