--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,3 +63,6 @@ jobs:
       - name: Fail if lefthook failed
         if: steps.lefthook.outcome == 'failure'
         run: exit 1
+
+      - name: Run bats tests
+        run: bats scripts/*.bats
