--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           # Temporarily render package.json from jinja template for lockfile generation
           sed 's/{{ project_name }}/template-project/g' package.json.jinja > package.json
-          bun install --frozen-lockfile=false
+          bun install
           rm package.json
 
       # ========================================
