ci(sync): remove node_modules after bun install to prevent commit
The template/ directory only has .gitignore.jinja, not .gitignore,
so node_modules/ was being tracked by git. The commit-action was
detecting these untracked files and attempting to commit them,
causing the sync workflow to fail on Renovate PRs.

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -66,6 +66,9 @@ jobs:
           sed 's/{{ project_name }}/template-project/g' package.json.jinja > package.json
           bun install
           rm package.json
+          # Remove node_modules to prevent it from being committed
+          # (template/ has no .gitignore, only .gitignore.jinja)
+          rm -rf node_modules
 
       # ========================================
       # Rust (cargo) lockfile regeneration
