ci(sync): use `--lockfile-only` to avoid generating node_modules
Using `--lockfile-only` flag is cleaner than installing dependencies
and then removing node_modules directory.

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -64,11 +64,8 @@ jobs:
         run: |
           # Temporarily render package.json from jinja template for lockfile generation
           sed 's/{{ project_name }}/template-project/g' package.json.jinja > package.json
-          bun install
+          bun install --lockfile-only
           rm package.json
-          # Remove node_modules to prevent it from being committed
-          # (template/ has no .gitignore, only .gitignore.jinja)
-          rm -rf node_modules
 
       # ========================================
       # Rust (cargo) lockfile regeneration
