ci(sync): use `--lockfile-only` to prevent `node_modules/` from being committed (#110)

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           # Temporarily render package.json from jinja template for lockfile generation
           sed 's/{{ project_name }}/template-project/g' package.json.jinja > package.json
-          bun install
+          bun install --lockfile-only
           rm package.json
 
       # ========================================
