fix(ci): copy `bun.lock` from `generated/node/` in workflow
The previous approach using copier's `_tasks` with `_copier_conf.src_path`
does not work when copier clones a Git repository to a temporary directory,
as the `generated/` folder is not included in the clone.

Instead, copy `bun.lock` directly in the sync-generated-to-template workflow
when Renovate updates `generated/node/bun.lock`. This ensures `template/bun.lock`
stays in sync without regenerating via `bun install --lockfile-only`, which
could produce different content in the packages section.

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -42,13 +42,25 @@ jobs:
           else
             echo "rust_changed=false" >> "$GITHUB_OUTPUT"
           fi
+
+          # Check if bun.lock was changed in generated/node/
+          if git diff --name-only "origin/$BASE_REF" HEAD -- 'generated/node/bun.lock' | grep -q .; then
+            echo "bun_lock_changed=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "bun_lock_changed=false" >> "$GITHUB_OUTPUT"
+          fi
         env:
           BASE_REF: ${{ github.event.pull_request.base.ref }}
 
-      # Note: bun.lock regeneration is not needed here because:
-      # - generated/node/bun.lock is updated directly by Renovate
-      # - copier uses _tasks to copy from generated/node/bun.lock
-      # - template/bun.lock no longer exists
+      # ========================================
+      # Node.js (bun) lockfile sync
+      # ========================================
+      # Copy bun.lock directly from generated/node/ instead of regenerating.
+      # This avoids the issue where `bun install --lockfile-only` may produce
+      # different packages section than what Renovate generated.
+      - name: Copy bun.lock from generated/node/
+        if: steps.sync.outputs.bun_lock_changed == 'true'
+        run: cp generated/node/bun.lock template/bun.lock
 
       # ========================================
       # Rust (cargo) lockfile regeneration
