--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -37,35 +37,30 @@ jobs:
           fi
 
           # Check which manifest files were changed
-          if [ -n "$(git status --porcelain template/package.json.jinja)" ]; then
-            echo "node_changed=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "node_changed=false" >> "$GITHUB_OUTPUT"
-          fi
-
           if [ -n "$(git status --porcelain template/Cargo.toml.jinja)" ]; then
             echo "rust_changed=true" >> "$GITHUB_OUTPUT"
           else
             echo "rust_changed=false" >> "$GITHUB_OUTPUT"
           fi
+
+          # Check if bun.lock was changed in generated/node/
+          if git diff --name-only "origin/$BASE_REF" HEAD -- 'generated/node/bun.lock' | grep -q .; then
+            echo "bun_lock_changed=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "bun_lock_changed=false" >> "$GITHUB_OUTPUT"
+          fi
         env:
           BASE_REF: ${{ github.event.pull_request.base.ref }}
 
       # ========================================
-      # Node.js (bun) lockfile regeneration
+      # Node.js (bun) lockfile sync
       # ========================================
-      - name: Setup Bun
-        if: steps.sync.outputs.node_changed == 'true'
-        uses: oven-sh/setup-bun@v2
-
-      - name: Regenerate bun.lock
-        if: steps.sync.outputs.node_changed == 'true'
-        working-directory: template
-        run: |
-          # Temporarily render package.json from jinja template for lockfile generation
-          sed 's/{{ project_name }}/template-project/g' package.json.jinja > package.json
-          bun install --lockfile-only
-          rm package.json
+      # Copy bun.lock directly from generated/node/ instead of regenerating.
+      # This avoids the issue where `bun install --lockfile-only` may produce
+      # different packages section than what Renovate generated.
+      - name: Copy bun.lock from generated/node/
+        if: steps.sync.outputs.bun_lock_changed == 'true'
+        run: cp generated/node/bun.lock template/bun.lock
 
       # ========================================
       # Rust (cargo) lockfile regeneration
