renovate: fix devDependencies and GitHub Actions using chore:/ci: instead of deps:
base.json5 uses commitMessagePrefix for devDependencies (chore:) and
github-actions (ci:), which takes precedence over semanticCommitType.
The previous config used semanticCommitType: 'deps' for devDependencies,
but this was ignored because commitMessagePrefix has higher priority.

Switch to commitMessagePrefix for both devDependencies and github-actions
to ensure these updates use deps: commit type and trigger release-please
patch bumps.

--- a/renovate.json5
+++ b/renovate.json5
@@ -7,18 +7,33 @@
   // template/ contains Copier templates (*.jinja), not actual project files
   ignorePaths: ['template/**'],
   packageRules: [
-    // Override base.json5's devDependencies rule (chore:) to use deps: instead.
+    // Override base.json5's devDependencies rule (chore:) and github-actions
+    // rule (ci:) to use deps: instead.
     // generic-boilerplate manages Copier templates, so package updates here
     // should propagate to all downstream repos via semantic version bumps.
+    //
+    // Use commitMessagePrefix (not semanticCommitType) because base.json5
+    // uses commitMessagePrefix for these rules, and commitMessagePrefix
+    // takes precedence over semanticCommitType.
     {
       matchDepTypes: ['devDependencies'],
-      semanticCommitType: 'deps',
-      semanticCommitScope: null,
+      matchUpdateTypes: ['minor', 'patch'],
+      commitMessagePrefix: 'deps:',
     },
     {
       matchDepTypes: ['devDependencies'],
       matchUpdateTypes: ['major'],
       commitMessagePrefix: 'deps!:',
+    },
+    {
+      matchManagers: ['github-actions'],
+      matchUpdateTypes: ['minor', 'patch'],
+      commitMessagePrefix: 'deps(ci):',
+    },
+    {
+      matchManagers: ['github-actions'],
+      matchUpdateTypes: ['major'],
+      commitMessagePrefix: 'deps(ci)!:',
     },
   ],
 }
