ci(renovate): group mise npm backend packages with npm counterparts
When a tool is configured via both mise (npm:prettier in .mise.toml)
and npm (prettier in package.json), Renovate creates separate PRs for
each. This causes unnecessary PR churn and requires manual coordination.

Add packageRules to group these related packages into single PRs.

--- a/renovate.json5
+++ b/renovate.json5
@@ -35,5 +35,18 @@
       matchUpdateTypes: ['major'],
       commitMessagePrefix: 'deps(ci)!:',
     },
+
+    // Group mise npm backend packages with their npm counterparts.
+    // This ensures "npm:prettier" in .mise.toml and "prettier" in package.json
+    // are updated together in a single PR.
+    // Unfortunately, groupName doesn't support templates, so each package pair must be listed explicitly.
+    {
+      matchDepNames: ['npm:prettier', 'prettier'],
+      groupName: 'prettier',
+    },
+    {
+      matchDepNames: ['npm:@commitlint/cli', '@commitlint/cli'],
+      groupName: '@commitlint/cli',
+    },
   ],
 }
