ci(sync-generated-to-template): use dynamic project_name for Cargo.lock generation
The project_name was hardcoded as "template-project" when regenerating
Cargo.lock, but tests/fixtures/rust.yml uses "rust" as project_name.
This mismatch caused Cargo.lock (with package name "template-project")
and Cargo.toml (with package name "rust") to be inconsistent, leading
to CI failures when cargo clippy regenerated Cargo.lock.

Now reads project_name from tests/fixtures/rust.yml using yq to ensure
consistency with copier template rendering.

--- a/.github/workflows/sync-generated-to-template.yml
+++ b/.github/workflows/sync-generated-to-template.yml
@@ -73,8 +73,10 @@ jobs:
         if: steps.sync.outputs.rust_changed == 'true'
         working-directory: template
         run: |
+          # Get project_name from the test fixture to match what copier uses
+          project_name=$(yq '.project_name' ../tests/fixtures/rust.yml)
           # Temporarily render Cargo.toml from jinja template for lockfile generation
-          sed 's/{{ project_name }}/template-project/g' Cargo.toml.jinja > Cargo.toml
+          sed "s/{{ project_name }}/${project_name}/g" Cargo.toml.jinja > Cargo.toml
           cargo generate-lockfile
           rm Cargo.toml
 
