--- a/tests/fixtures/base-release.yml
+++ b/tests/fixtures/base-release.yml
@@ -5,3 +5,4 @@ description: Test project description
 is_public: false
 use_release_please: true
 release_type: simple
+auto_merge_release_pr: false
