ci: regenerate Cargo.lock before validate for correct package name
template/Cargo.lock uses a fixed package name ("rust"), but fixtures
with different project_name values (e.g. "rust-release") cause cargo
to rewrite the lock file during validation, producing an unexpected
diff. Run cargo generate-lockfile before git init to ensure the lock
file matches Cargo.toml before lefthook runs.

--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -121,6 +121,11 @@ jobs:
           git add -A
           git commit -m "initial"
 
+      - name: Regenerate Cargo.lock with correct package name
+        if: hashFiles(format('generated/{0}/Cargo.toml', matrix.fixture)) != ''
+        working-directory: generated/${{ matrix.fixture }}
+        run: cargo generate-lockfile
+
       - name: Run lefthook
         working-directory: generated/${{ matrix.fixture }}
         run: lefthook run pre-commit --all-files
