feat: add monorepo support with two-layer deployment model
Monorepo projects (e.g. frontend/ = Node + backend/ = Rust) could not
use this template because infrastructure files (test.yml, lefthook,
renovate, etc.) assumed a single-repo root layout.

Leverage Copier's multi-deployment feature to support a two-layer model:
1. Root deployment (type: base) generates monorepo-aware infrastructure
   using a new `subpackages` parameter
2. Subdirectory deployments (is_subpackage: true) generate only
   language-specific files, excluding root infrastructure

Changes:
- copier.yml: Add `subpackages` (yaml list) and `is_subpackage` (bool)
  parameters with corresponding _exclude rules
- test.yml: Generate per-subpackage unit-test jobs and combined lint job
  with dependency caching for all subpackages
- lefthook.yml: Add root-scoped cargo-fmt/clippy commands for monorepo
  (remotes rust.yml lacks root support)
- renovate.json5: Combine extends from all unique subpackage types
- .mise.toml: Check subpackages for node type when deciding npm tools
- release-please-config.json: Generate per-subpackage entries
- .release-please-manifest.json: Generate per-subpackage versions

--- a/copier.yml
+++ b/copier.yml
@@ -65,6 +65,14 @@ _exclude:
   # Exclude type-specific files
   - "{% if type not in ['node', 'rust'] %}.gitignore{% endif %}"
   - "{% if type not in ['node', 'rust'] %}src{% endif %}"
+  # Exclude root-level infrastructure files for subpackage deployments
+  - '{% if is_subpackage %}.github{% endif %}'
+  - '{% if is_subpackage %}lefthook.yml{% endif %}'
+  - '{% if is_subpackage %}renovate.json5{% endif %}'
+  - '{% if is_subpackage %}.mise.toml{% endif %}'
+  - '{% if is_subpackage %}release-please-config.json{% endif %}'
+  - '{% if is_subpackage %}.release-please-manifest.json{% endif %}'
+  - '{% if is_subpackage %}README.md{% endif %}'
 
 # Template parameters
 is_public:
@@ -89,3 +97,23 @@ release_type:
     - java
   help: Select the release-type for your project
   when: '{{ use_release_please }}'
+
+# Monorepo subpackage definitions.
+# When non-empty, infrastructure files (test.yml, lefthook, renovate, etc.)
+# are generated in monorepo mode.
+# Input via --data-file is recommended for this parameter.
+subpackages:
+  type: yaml
+  multiline: true
+  default: []
+  help: |
+    Subpackage definitions for monorepo.
+    Example: [{name: frontend, type: node}, {name: backend, type: rust}]
+  when: "{{ type == 'base' }}"
+
+# Set to true when deploying into a monorepo subdirectory.
+# Suppresses root-level infrastructure files.
+is_subpackage:
+  type: bool
+  default: false
+  help: Skip root-level infrastructure files (for monorepo subdirectory deployment)
