fix: fix CI failure from missing fixture parameters and extra blank lines
The `regenerate-and-commit` CI job failed because `subpackages` prompted
for interactive input in non-interactive mode, and Jinja2 set/if blocks
produced extra blank lines in the generated output.

Add `subpackages` and `is_subpackage` defaults to all test fixture data
files and use Jinja2 whitespace control (`{%- -%}`) to suppress blank
lines from template directives.

--- a/tests/fixtures/base-public.yml
+++ b/tests/fixtures/base-public.yml
@@ -4,3 +4,5 @@ project_name: base-public
 description: Test project description
 is_public: true
 use_release_please: false
+subpackages: []
+is_subpackage: false
