--- a/tests/fixtures/base-release.yml
+++ b/tests/fixtures/base-release.yml
@@ -5,3 +5,5 @@ description: Test project description
 is_public: false
 use_release_please: true
 release_type: simple
+subpackages: []
+is_subpackage: false
