ci, template: fix monorepo validation failures
Two issues caused the monorepo validate job to fail:

1. lefthook.yml.jinja used double quotes for root/glob values, but
   prettier's singleQuote rule converted them to single quotes, causing
   a diff after lefthook run.

2. sed-based Cargo.lock package name replacement broke Cargo.lock v4's
   topological sort ordering. cargo clippy then rewrote the lock file
   to fix the order, causing a diff. Add cargo generate-lockfile after
   sed to normalize the format.

--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -124,6 +124,9 @@ jobs:
             if [ -f "$lock" ]; then
               expected=$(sed -n 's/^name = "\(.*\)"/\1/p' "$toml" | head -1)
               sed -i "s/^name = \"rust\"$/name = \"${expected}\"/" "$lock"
+              # Regenerate lock file to normalize format (Cargo.lock v4 uses
+              # topological sort, so a sed rename may break ordering)
+              (cd "$dir" && cargo generate-lockfile)
             fi
           done < <(find . -name Cargo.toml -print0)
           while IFS= read -r -d '' pkg_json; do
