gemini, template: scope test review rules to Rust and move CLAUDE.md to template
The previous commit placed CLAUDE.md at the repo root and included
multi-language parameterized test guidance. Since this template only
uses Rust for testing, the rules should be Rust-specific (rstest).
CLAUDE.md belongs in template/ as a Copier template so derived repos
get it automatically, with has_rust conditional to support both
single-crate and monorepo layouts.

--- a/copier.yml
+++ b/copier.yml
@@ -58,6 +58,8 @@ _exclude:
   - "{% if type != 'node' %}/eslint.config.js{% endif %}"
   - "{% if type != 'node' %}/vitest.config.ts{% endif %}"
   - "{% if type != 'node' %}/bun.lock{% endif %}"
+  # Exclude CLAUDE.md when no Rust code (only contains Rust test rules)
+  - "{% if type != 'rust' and not (subpackages | selectattr('type', 'equalto', 'rust') | list) %}/CLAUDE.md{% endif %}"
   # Exclude Rust specific files when type is not 'rust'
   - "{% if type != 'rust' %}/Cargo.toml{% endif %}"
   - "{% if type != 'rust' %}/Cargo.lock{% endif %}"
