--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -217,6 +217,7 @@ jobs:
       - validate
       - validate-node
       - validate-rust
-    if: failure()
+    if: always()
     steps:
-      - run: exit 1
+      - if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
+        run: exit 1
